# level4-recsys-finalproject-hackathon-recsys-01-lv3

./: .bash_history  .cz.yaml  .gitignore  README.md  main.py  pyproject.toml
G3_EDA/: config.yaml  preprocessing.py  print_df.py  save_plot.py
config/: config_01.yaml  rl.yaml
deployment/api/: app.py
experiments/: optuna_tuning_mbgcn.py  optuna_tuning_mf.py
scripts/: evaluate_model.py  generate_recommendations.py  hrl_dqn_td3.sh  main_rl.py  mbgcn_grid.sh  mf_grid.sh  train_model.py
scripts/LLM/: after_tuning.py  embedding_results.py  example.py  inference.py  post_llm.py  tuning.py
scripts/eda/: eda_cosmetic.py  group4_basic_eda_14.ipynb  group4_create_small.py  group4_eda_fe_14.ipynb  group4_optimize_data.py  group4_seperate_data.py
scripts/eda_task/: eda_task_jw.py
scripts/eda_task/RFM/: basic_RFM.py  cat_RFM.py  test.py
scripts/papago_translation/: papago_translation.py
service/frontend/src/: App.css  App.jsx
service/frontend/src/Pages/: Main.jsx  Result1.jsx  Result2.jsx  SimilarSearch.jsx  SimilarSearchResult.jsx
service/frontend/src/components/: DiscountControlBox.jsx  FileDownloadSection.jsx  GraphAndBoxes.jsx  Header.jsx  OptimalPromotionBox.jsx  PromoButton.jsx  SimilarItemSection.jsx
service/frontend/src/components/PromotionForm/: NumberInput.jsx  PromotionForm.jsx  SelectBox.jsx
service/frontend/src/styles/: theme.js
src/: __init__.py  evaluate.py  loss.py  mbgcn_scores.py  train.py  train_manager.py  train_mf_tmall.py
src/WebScrapping/: crawling.py
src/agent/: DDPGAgent.py  DQNTD3Agent.py  SACAgent.py  TD3Agent.py
src/backend/app/: main.py
src/data/: __init__.py  dataset.py  feature_engineering.py  item_FE.py  item_FE_1.py  item_FE_3.py  load_data.py  neg_sample.py  preparation.py  preprocess.py  preprocessor.py  user_FE.py  user_FE_1.py  user_FE_2.py  user_FE_3.py
src/data/preprocess_for_rl/: cal_elasticity.py  data_preprocess.py  environment.py
src/models/: base_model.py  factory.py  mbgcn.py  mbgcn2.py  mbgcn2_meta.py  mbgcn3.py  mbgcn_multi_layer.py  mf.py  rl_models.py
src/pipelines/: evaluate_pipeline.py  predict_pipeline.py  train_agent.py  train_pipeline.py
src/utils/: __init__.py  add_noise.py  load_file.py  metrics.py  replay_buffer.py  reward_normalizer.py  utility.py  validate_rl.py
tests/: test_data.py  test_models.py  test_utils.py
