[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["geonwook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
polars = "^1.19.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
memory-profiler = "^0.61.0"
graphviz = "^0.20.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
bs4 = "^0.0.2"
tabulate = "^0.9.0"
google = "^3.0.0"
google-cloud-translate = "^3.19.0"
googletrans = "4.0.0.rc1"
wordsegment = "^1.3.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"
line-profiler = "^4.2.0"
chart-studio = "^1.1.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
