[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["geonwook"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
polars = "^1.19.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
scipy = "^1.15.1"
scikit-learn = "^1.6.1"
torch = "^2.5.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
stable-baselines3 = "^2.5.0"
gym = "^0.26.2"
gymnasium = "^1.0.0"
shimmy = "^2.0.0"
streamlit = "^1.41.1"
plotly = "^6.0.0"
tqdm = "^4.67.1"
pympler = "^1.1"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
