[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["WonchanMoon <0001wonchan@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pandas = "^2.2.3"
polars = "^1.19.0"
pyarrow = "^18.1.0"
memory-profiler = "^0.61.0"
beautifulsoup4 = "^4.13.3"
chart-studio = "^1.1.0"
colorama = "^0.4.6"
matplotlib = "^3.10.0"
plotly = "^6.0.0"
seaborn = "^0.13.2"
scipy = "^1.15.1"
torch = "^2.6.0"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
bs4 = "^0.0.2"
stable-baselines3 = "^2.5.0"
gym = "^0.26.2"
gymnasium = "^1.0.0"
shimmy = "^2.0.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
